@@ -53,6 +53,7 @@ requires.append(get_require_version('trytond'))
 tests_require = [
     get_require_version('trytond_product_attribute'),
     get_require_version('trytond_product_image'),
+    get_require_version('trytond_sale_price_list'),
     ]
 
 setup(name=name,
