@@ -12,6 +12,7 @@ depends:
 extras_depend:
     product_attribute
     product_image
+    sale_price_list
 xml:
     web.xml
     product.xml
