@@ -1,3 +1,4 @@
+* Support sale price list per web shop
 
 Version 7.0.0 - 2023-10-30
 --------------------------
